--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "leanmodal_xl",
+  "name":    "leanmodal_xl",
   "version": "0.5.0",
   "authors": [
     "Richard Peck <rpeck@frontlineutilities.co.uk)"
@@ -10,6 +10,10 @@
     "globals",
     "node"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/richpeck/leanmodal_xl"
+  },
   "keywords": [
     "lean",
     "modal",
