--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "LeanModalXL",
-  "version": "0.5.0",
+  "name": "leanmodal_xl",
+  "version": "0.5.1",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "~0.10.0",
@@ -35,6 +35,6 @@
     "script",
     "jquery"
   ],
-  "author": "Richard Peck (support@frontlineutilities.co.uk)",
+  "author": "Richard Peck (rpeck@frontlineutilities.co.uk)",
   "license": "ISC"
 }
