--- a/package.json
+++ b/package.json
@@ -1,51 +1,40 @@
 {
   "name": "leanmodal_xl",
-  "version": "1.5.0",
-  "description": "Smooth scrolling experience for websites.",
-  "main": "smoothscroll-for-websites.js",
+  "version": "0.5.0",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "~0.5.0",
+    "gulp": "^3.8.8",
+    "gulp-rename": "^1.2.0",
+    "gulp-util": "^3.0.1",
+    "gulp-concat": "^2.4.1",
+    "gulp-minify-css": "^0.3.11",
+    "tiny-lr": "^0.1.4",
+    "gulp-livereload": "^2.1.1",
+    "gulp-uglify": "^1.0.1",
+    "gulp-notify": "^2.0.0",
+    "gulp-autoprefixer": "^1.0.1",
+    "gulp-less": "^1.3.6",
+    "gulp-coffee": "^2.2.0"
+  },
+  "description": "Extended \"LeanModal\" modal pop-over for web apps - includes Ajax, on-demand functionality & more\"",
+  "main": "leanmodal_xl.js",
+  "dependencies": {
+    "grunt": "~0.4.5",
+    "grunt-init": "~0.3.2"
+  },
   "scripts": {
-    "test": "echo \"No test specified\" && exit 1",
-    "minify": "grunt"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/richpeck/smoothscroll-for-websites.git"
-  },
-  "paths": {
-    "src": "src",
-    "dev": "dev",
-    "build": "build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "smooth",
-    "scroll",
-    "scrolling",
-    "animation",
-    "wheel",
-    "chrome",
-    "easing",
-    "nice"
+    "lean",
+    "modal",
+    "popover",
+    "script",
+    "jquery"
   ],
-  "author": "Balazs Galambosi (https://www.smoothscroll.net)",
-  "contributors": [
-    "Richard Peck <rpeck@frontlineutilities.co.uk> (http://frontlineutilities.co.uk)"
-  ],
-  "license": "SEE LICENSE IN ./LICENSE",
-  "bugs": {
-    "url": "https://github.com/galambalazs/smoothscroll-for-websites/issues"
-  },
-  "homepage": "https://github.com/galambalazs/smoothscroll-for-websites",
-  "devDependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "grunt-babel": "^6.0.0",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-uglify": "^1.0.1",
-    "grunt-contributors": "0.0.3",
-    "grunt-replace": "^1.0.1",
-    "load-grunt-config": "^0.19.1",
-    "time-grunt": "^1.3.0"
-  },
-  "dependencies": {
-    "grunt": "^1.0.1"
-  }
+  "author": "Richard Peck (rpeck@frontlineutilities.co.uk)",
+  "license": "ISC"
 }
